--- a/composer.json
+++ b/composer.json
@@ -16,23 +16,57 @@
     }
   },
   "require": {
+    "drupal/admin_toolbar": "2.4.0",
     "drupal/antibot": "1.4.0",
+    "drupal/chosen": "2.10.0",
+    "drupal/ckeditor_a11ychecker": "1.0.0",
+    "drupal/clientside_validation": "3.0.0-rc4",
     "drupal/coc_forms_auto_export": "1.0.0-alpha1",
     "drupal/config_entity_revisions": "1.6.0",
     "drupal/events_logging": "1.4.0",
+    "drupal/embed": "1.4.0",
+    "drupal/entity_print": "2.2.0",
     "drupal/gin": "3.0.0-alpha33",
+    "drupal/header_and_footer_scripts": "2.2.0",
+    "drupal/honeypot": "1.29",
+    "drupal/image_widget_crop": "2.3.0",
+    "drupal/ldap": "3.0.0-beta7",
+    "drupal/ldap_auth": "1.21.0",
     "drupal/libraries": "3.0.0-beta1",
+    "drupal/linkit": "5.0.0-beta12",
     "drupal/logging_alerts": "1.0.0",
     "drupal/maestro": "3.0.1-rc2",
+    "drupal/mailsystem": "4.3.0",
     "drupal/masquerade": "2.0.0-beta4",
-    "drupal/honeypot": "^1.29",
+    "drupal/pathauto": "1.8.0",
+    "drupal/permissions_by_term": "2.27.0",
+    "drupal/queue_mail": "1.3.0",
+    "drupal/queue_ui": "2.2.0",
+    "drupal/redirect": "1.6.0",
     "drupal/rules": "3.0.0-alpha6",
     "drupal/rules_token": "1.2.0",
     "drupal/rules_webform": "1.5.0",
+    "drupal/simple_ldap": "1.0.0-alpha3",
+    "drupal/simplesamlphp_auth": "3.2.0",
+    "drupal/smtp": "1.0.0",
+    "drupal/telephone_validation": "2.3.0",
+    "drupal/token": "1.9.0",
     "drupal/ultimate_cron": "2.0.0-alpha5",
     "drupal/user_default_page": "2.0.0-rc1",
+    "drupal/webform_embed": "1.x-dev",
+    "drupal/webform_composite": "1.0-rc2",
+    "drupal/webform_migrate": "1.1.0",
+    "drupal/webform_permissions_by_term": "1.2.0",
     "drupal/webform_remote_handlers": "1.6.0",
-    "drupal/webform_rest": "4.0.0-beta2"
+    "drupal/webform_rest": "4.0.0-beta2",
+    "drupal/webform_scheduled_tasks": "2.0.0-alpha5",
+    "drupal/webform_views": "5.0.0-alpha7",
+    "vaimo/composer-patches": "4.22.2",
+    "vlucas/phpdotenv": "2.6.7",
+    "webflo/drupal-finder": "1.2.2",
+    "webmozart/path-util": "2.3.0",
+    "wikimedia/composer-merge-plugin": "2.0.1",
+    "zaporylie/composer-drupal-optimizations": "1.2.0"
   },
   "extra" : {
     "composer-exit-on-patch-failure": true,
