--- a/os2forms_forloeb.info.yml
+++ b/os2forms_forloeb.info.yml
@@ -6,16 +6,22 @@ core: 8.x
 core_version_requirement: ^8 || ^9
 
 dependencies:
+  - admin_toolbar_tools
   - antibot
   - coc_forms_auto_export
   - config_entity_revisions
   - events_logging
   - gin
+  - honeypot
   - libraries
   - logging_alerts
   - maestro
   - masquerade
-  - honeypot
+  - os2forms
+  - os2forms_nemid
+  - os2forms_dawa
+  - os2forms_sbsys
+  - os2web_simplesaml
   - rules
   - rules_token
   - rules_webform
