Remove conflicting module as dependencies.

--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,8 @@
     "drupal/config_entity_revisions": "1.6.0",
     "drupal/events_logging": "1.4.0",
     "drupal/embed": "1.4.0",
-    "drupal/entity_print": "2.2.0",
     "drupal/gin": "3.0.0-alpha33",
     "drupal/header_and_footer_scripts": "2.2.0",
-    "drupal/honeypot": "1.29",
     "drupal/image_widget_crop": "2.3.0",
     "drupal/ldap": "3.0.0-beta7",
     "drupal/ldap_auth": "1.21.0",
@@ -36,34 +34,26 @@
     "drupal/linkit": "5.0.0-beta12",
     "drupal/logging_alerts": "2.0.0",
     "drupal/maestro": "3.0.1-rc2",
-    "drupal/mailsystem": "4.3.0",
     "drupal/masquerade": "2.0.0-beta4",
-    "drupal/pathauto": "1.8.0",
-    "drupal/permissions_by_term": "2.27.0",
     "drupal/queue_mail": "1.3.0",
     "drupal/queue_ui": "2.2.0",
-    "drupal/redirect": "1.6.0",
     "drupal/rules": "3.0.0-alpha6",
     "drupal/rules_token": "1.2.0",
     "drupal/rules_webform": "1.5.0",
     "drupal/simple_ldap": "1.0.0-alpha3",
     "drupal/simplesamlphp_auth": "3.2.0",
-    "drupal/smtp": "1.0.0",
     "drupal/telephone_validation": "2.3.0",
-    "drupal/token": "1.9.0",
     "drupal/ultimate_cron": "2.0.0-alpha5",
     "drupal/user_default_page": "2.0.0-rc1",
-    "drupal/webform_embed": "1.x-dev",
     "drupal/webform_composite": "1.0-rc2",
     "drupal/webform_remote_handlers": "1.6.0",
     "drupal/webform_rest": "4.0.0-beta2",
     "drupal/webform_scheduled_tasks": "2.0.0-alpha5",
     "drupal/webform_views": "5.0.0-alpha7",
-    "vaimo/composer-patches": "4.22.2",
+    "vaimo/composer-patches": "^4.20",
     "vlucas/phpdotenv": "2.6.7",
     "webflo/drupal-finder": "1.2.2",
     "webmozart/path-util": "2.3.0",
-    "wikimedia/composer-merge-plugin": "2.0.1",
     "zaporylie/composer-drupal-optimizations": "1.2.0"
   },
   "extra" : {
