--- a/os2forms_forloeb.info.yml
+++ b/os2forms_forloeb.info.yml
@@ -10,20 +10,42 @@ dependencies:
   - antibot
   - coc_forms_auto_export
   - config_entity_revisions
+  - entity_print
+  - eu_cookie_compliance
   - events_logging
   - honeypot
   - libraries
   - maestro
+  - mailsystem
   - masquerade
   - os2forms
   - os2forms_nemid
   - os2forms_dawa
   - os2forms_sbsys
   - os2web_simplesaml
+  - pathauto
+  - redirect
   - rules
   - rules_token
   - rules_webform
+  - smtp
+  - system
+  - token
   - ultimate_cron
   - user_default_page
+  - webform
+  - webform_ui
+  - webform_access
+  - webform_attachment
+  - webform_composite
+  - webform_embed
+  - webform_entity_print
+  - webform_entity_print_attachment
+  - webform_migrate
+  - webform_permissions_by_term
   - webform_remote_handlers
   - webform_rest
+  - webform_scheduled_email
+  - webform_submission_export_import
+  - webform_submission_log
+  - webform_templates
