--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   },
   "require": {
-    "drupal/admin_toolbar": "2.4.0",
+    "drupal/admin_toolbar": "^2.3",
     "drupal/chosen": "2.10.0",
     "drupal/ckeditor_a11ychecker": "1.0.0",
     "drupal/clientside_validation": "3.0.0-rc4",
@@ -27,30 +27,30 @@
     "drupal/gin": "3.0.0-alpha33",
     "drupal/header_and_footer_scripts": "2.2.0",
     "drupal/image_widget_crop": "2.3.0",
-    "drupal/ldap": "3.0.0-beta7",
-    "drupal/ldap_auth": "1.21.0",
+    "drupal/ldap": "^3.0@beta",
+    "drupal/ldap_auth": "^1.17",
     "drupal/libraries": "3.0.0-beta1",
-    "drupal/linkit": "5.0.0-beta12",
+    "drupal/linkit": "^5.0",
     "drupal/logging_alerts": "1.0.0",
     "drupal/maestro": "3.0.1-rc2",
     "drupal/masquerade": "2.0.0-beta4",
     "drupal/queue_mail": "1.3.0",
-    "drupal/queue_ui": "2.2.0",
+    "drupal/queue_ui": "^2.1",
     "drupal/rules": "3.0.0-alpha6",
     "drupal/rules_token": "1.2.0",
     "drupal/rules_webform": "1.5.0",
     "drupal/simple_ldap": "1.0.0-alpha3",
     "drupal/simplesamlphp_auth": "3.2.0",
-    "drupal/telephone_validation": "2.3.0",
+    "drupal/telephone_validation": "^2.2",
     "drupal/ultimate_cron": "2.0.0-alpha5",
     "drupal/user_default_page": "2.0.0-rc1",
     "drupal/webform_composite": "1.0-rc2",
     "drupal/webform_remote_handlers": "1.6.0",
     "drupal/webform_rest": "4.0.0-beta2",
-    "drupal/webform_scheduled_tasks": "2.0.0-alpha5",
+    "drupal/webform_scheduled_tasks": "^2.0",
     "drupal/webform_views": "5.0.0-alpha7",
     "vaimo/composer-patches": "^4.20",
-    "vlucas/phpdotenv": "2.6.7",
+    "vlucas/phpdotenv": "^2.4",
     "webmozart/path-util": "2.3.0",
     "zaporylie/composer-drupal-optimizations": "1.2.0"
   },
