--- a/config/install/rules.reaction.redirect_flowdesigner_on_login.yml
+++ b/config/install/rules.reaction.redirect_flowdesigner_on_login.yml
@@ -1,7 +1,7 @@
 langcode: da
 status: true
 dependencies: {  }
-id: redirect_on_login
+id: redirect_flow_designer_on_login
 label: 'Redirect flow-designer on login'
 events:
   -
