Add patch to support upcaststing entity IDs. This is useful in general.

--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,9 @@
       },
       "drupal/webform": {
         "Unlock possibility of using Entity print module export to Word": "https://www.drupal.org/files/issues/2020-02-29/3096552-6.patch"
+      },
+      "drupal/rules": {
+        "Support upcasting entity IDs to full entity contexts": "https://www.drupal.org/files/issues/2020-12-17/2800749-68.upcast.patch"
       }
     }
   }
