--- a/os2forms_forloeb.info.yml
+++ b/os2forms_forloeb.info.yml
@@ -32,6 +32,7 @@ dependencies:
   - switch_page_theme
   - token
   - ultimate_cron
+  - user_default_page
   - webform
   - webform_ui
   - webform_access
