--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
     "drupal/webform_rest": "4.0.0-beta2",
     "drupal/webform_scheduled_tasks": "^2.0",
     "drupal/webform_views": "5.0.0-alpha7",
+    "drupal/workflow_participants": "2.4",
     "vlucas/phpdotenv": "^2.4",
     "webmozart/path-util": "2.3.0",
     "zaporylie/composer-drupal-optimizations": "1.2.0"
