Ensure that configuration files has a dependency on os2forms_forloeb

--- a/config/install/core.entity_form_display.node.forloebsside.default.yml
+++ b/config/install/core.entity_form_display.node.forloebsside.default.yml
@@ -9,6 +9,10 @@ dependencies:
   - path
   - text
   - webform
+  - os2forms_forloeb
+  enforced:
+    module:
+    - os2forms_forloeb
 id: node.forloebsside.default
 targetEntityType: node
 bundle: forloebsside
