--- a/config/install/core.entity_view_display.node.forloebsside.default.yml
+++ b/config/install/core.entity_view_display.node.forloebsside.default.yml
@@ -10,6 +10,10 @@ dependencies:
     - text
     - user
     - webform
+    - os2forms_forloeb
+    enforced:
+      module:
+      - os2forms_forloeb
 id: node.forloebsside.default
 targetEntityType: node
 bundle: forloebsside
