--- a/config/install/field.field.node.forloebsside.body.yml
+++ b/config/install/field.field.node.forloebsside.body.yml
@@ -6,6 +6,10 @@ dependencies:
   - node.type.forloebsside
   module:
   - text
+  - os2forms_forloeb
+  enforced:
+    module:
+    - os2forms_forloeb
 id: node.forloebsside.body
 field_name: body
 entity_type: node
