--- a/config/install/field.field.node.forloebsside.field_forloeb_webformular.yml
+++ b/config/install/field.field.node.forloebsside.field_forloeb_webformular.yml
@@ -6,6 +6,10 @@ dependencies:
   - node.type.forloebsside
   module:
   - webform
+  - os2forms_forloeb
+  enforced:
+    module:
+    - os2forms_forloeb
 id: node.forloebsside.field_forloeb_webformular
 field_name: field_forloeb_webformular
 entity_type: node
