--- a/config/install/field.storage.node.field_forloeb_webformular.yml
+++ b/config/install/field.storage.node.field_forloeb_webformular.yml
@@ -4,6 +4,10 @@ dependencies:
   module:
   - node
   - webform
+  - os2forms_forloeb
+  enforced:
+    module:
+    - os2forms_forloeb
 id: node.field_forloeb_webformular
 field_name: field_forloeb_webformular
 entity_type: node
