--- a/config/install/user_default_page.user_default_page_config_entity.leder_default_page.yml
+++ b/config/install/user_default_page.user_default_page_config_entity.leder_default_page.yml
@@ -1,6 +1,11 @@
 langcode: da
 status: true
-dependencies: {  }
+dependencies:
+  module:
+  - os2forms_forloeb
+enforced:
+  module:
+  - os2forms_forloeb
 id: leder_default_page
 label: 'Flow designer default page'
 user_roles:
