--- a/config/install/switch_page_theme.settings.yml
+++ b/config/install/switch_page_theme.settings.yml
@@ -5,40 +5,39 @@ dependencies:
     module:
     - os2forms_forloeb
 spt_table:
--
-  status: '1'
-  pages: '/node/*'
-  theme: custom_theme
-  roles:
-    anonymous: anonymous
-    authenticated: authenticated
-    administrator: administrator
-    flow_designer: flow_designer
-    forloeb_designer: forloeb_designer
-    sagsbehandler: sagsbehandler
-    medarbejder: medarbejder
-    leder: leder
-  language:
-    da: da
-    en: en
-  weight: '-10'
-  remove: Remove
--
-  status: '1'
-  pages: "/user/*\r\n<front>"
-  theme: gin
-  roles:
-    authenticated: authenticated
-    administrator: administrator
-    flow_designer: flow_designer
-    forloeb_designer: forloeb_designer
-    sagsbehandler: sagsbehandler
-    medarbejder: medarbejder
-    leder: leder
-    anonymous: 0
-  language:
-    da: da
-    en: en
-  weight: '-10'
-  remove: Remove
-
+  1:
+    status: '1'
+    pages: "/user/*\r\n<front>\r\n/sagsbehandler-overblik/*\r\n/sagsbehandler-overblik\r\n/maestro-all-flows\r\n/outstanding-tasks\r\n/taskconsole\r\n/maestro/*\r\n/maestro-all-in-production-tasks"
+    theme: gin
+    roles:
+      authenticated: authenticated
+      administrator: administrator
+      flow_designer: flow_designer
+      forloeb_designer: forloeb_designer
+      sagsbehandler: sagsbehandler
+      medarbejder: medarbejder
+      leder: leder
+      anonymous: 0
+    language:
+      da: da
+      en: en
+    weight: '-10'
+    remove: Remove
+  0:
+    status: '1'
+    pages: '/node/*'
+    theme: custom_theme
+    roles:
+      anonymous: anonymous
+      authenticated: authenticated
+      administrator: administrator
+      flow_designer: flow_designer
+      forloeb_designer: forloeb_designer
+      sagsbehandler: sagsbehandler
+      medarbejder: medarbejder
+      leder: leder
+    language:
+      da: da
+      en: en
+    weight: '-9'
+    remove: Remove
