--- a/config/optional/user_default_page.user_default_page_config_entity.flow_designer_default_page.yml
+++ b/config/optional/user_default_page.user_default_page_config_entity.flow_designer_default_page.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   enforced:
     module:
-      - os2forms_forloeb
+    - os2forms_forloeb
 id: flow_designer_default_page
 label: 'Flow designer default page'
 user_roles:
@@ -11,6 +11,6 @@ user_roles:
 users: null
 weight: -1
 login_redirect: /maestro/templates/list
-login_redirect_message: ''
+login_redirect_message: 'Velkommen tilbage, her kan du arbejde med flow skabeloner.'
 logout_redirect: ''
 logout_redirect_message: ''
