--- a/os2forms_forloeb.info.yml
+++ b/os2forms_forloeb.info.yml
@@ -53,3 +53,5 @@ dependencies:
   - webform_submission_log
   - webform_templates
   - workflow_participants
+'interface translation project': os2forms_forloeb
+'interface translation server pattern': modules/contrib/os2forms_forloeb/translations/os2forms_forloeb.da.po
