Adjustment to switch theme module config + moved to optional.

--- a/config/optional/switch_page_theme.settings.yml
+++ b/config/optional/switch_page_theme.settings.yml
@@ -25,7 +25,7 @@ spt_table:
     remove: Remove
   0:
     status: '1'
-    pages: '/node/*'
+    pages: "/node/*\r\n*/submission/*/edit"
     theme: custom_theme
     roles:
       anonymous: anonymous
