Fix uninstall and move templates to optional directory.

--- a/config/optional/maestro.maestro_template.content_moderation.yml
+++ b/config/optional/maestro.maestro_template.content_moderation.yml
@@ -1,5 +1,10 @@
 status: true
-dependencies: {  }
+dependencies:
+  config:
+  - maestro
+  enforced:
+    module:
+    - os2forms_forloeb
 id: content_moderation
 label: 'Review webformular indsendelse'
 app_group: 0
