--- a/config/optional/maestro.maestro_template.review_submission.yml
+++ b/config/optional/maestro.maestro_template.review_submission.yml
@@ -1,5 +1,10 @@
 status: true
-dependencies: {  }
+dependencies:
+  config:
+  - maestro
+  enforced:
+    module:
+    - os2forms_forloeb
 id: review_submission
 label: 'Review submission'
 app_group: 0
