--- a/config/optional/webform.webform.barsel_erklaering_ved_graviditet.yml
+++ b/config/optional/webform.webform.barsel_erklaering_ved_graviditet.yml
@@ -4,7 +4,6 @@ dependencies:
   module:
   - maestro_webform
   - os2forms
-  - os2forms_forloeb
   - webform_entity_print
   - webform_revisions
 third_party_settings:
@@ -38,7 +37,7 @@ id: barsel_erklaering_ved_graviditet
 title: 'Barsel: Erklæring ved graviditet'
 description: ''
 category: ''
-elements: "barsel_erklaering_ved_graviditet:\n  '#type': hidden\n  '#title': 'Barsel: Erklæring ved graviditet'\n  '#default_value': barsel\nside:\n  '#type': webform_wizard_page\n  '#title': Side\n  fulde_navn:\n    '#type': textfield\n    '#title': 'Fulde navn'\n    '#required': true\n  az_ident:\n    '#type': textfield\n    '#title': Az-ident\n    '#required': true\n  privat_e_mail:\n    '#type': email\n    '#title': 'Privat e-mail'\n    '#required': true\n  privat_telefonnummer:\n    '#type': tel\n    '#title': 'Privat telefonnummer'\n    '#required': true\n  forventet_foedsel_termin_:\n    '#type': date\n    '#title': 'Forventet fødsel (termin)'\n    '#required': true\n    '#default_value': '2021-08-16'\n    '#datepicker': true\n    '#date_date_format': d-m-Y\n  orlov_foer_foedsel:\n    '#type': date\n    '#title': 'Orlov før fødsel'\n    '#required': true\n    '#datepicker': true\n    '#date_date_format': d-m-Y"
+elements: "send_til:\n  '#type': hidden\n  '#title': 'Send til'\n  '#default_value': mn@magenta-aps.dk\n  '#prepopulate': true\nflow_type:\n  '#type': hidden\n  '#title': 'Flow type'\n  '#default_value': barsel\nside:\n  '#type': webform_wizard_page\n  '#title': Side\n  fulde_navn:\n    '#type': textfield\n    '#title': 'Fulde navn'\n    '#required': true\n  az_ident:\n    '#type': textfield\n    '#title': Az-ident\n    '#required': true\n  privat_e_mail:\n    '#type': email\n    '#title': 'Privat e-mail'\n    '#required': true\n  privat_telefonnummer:\n    '#type': tel\n    '#title': 'Privat telefonnummer'\n    '#required': true\n  forventet_foedsel_termin_:\n    '#type': date\n    '#title': 'Forventet fødsel (termin)'\n    '#required': true\n    '#default_value': '2021-08-16'\n    '#datepicker': true\n    '#date_date_format': d-m-Y\n  orlov_foer_foedsel:\n    '#type': date\n    '#title': 'Orlov før fødsel'\n    '#required': true\n    '#datepicker': true\n    '#date_date_format': d-m-Y"
 css: ''
 javascript: ''
 settings:
