Removed unnecessary UUIDs.

--- a/config/optional/maestro.maestro_template.request_external.yml
+++ b/config/optional/maestro.maestro_template.request_external.yml
@@ -1,9 +1,8 @@
-uuid: 00c6ff41-7aef-4276-bfda-cf55285ad170
 langcode: en
 status: true
 dependencies: {  }
 id: request_external
-label: 'GIR Create External'
+label: 'GIR Request New External'
 app_group: 0
 canvas_height: 900
 canvas_width: 800
