--- a/config/optional/maestro.maestro_template.request_org_unit.yml
+++ b/config/optional/maestro.maestro_template.request_org_unit.yml
@@ -1,7 +1,8 @@
-uuid: 00c6ff41-7aef-4276-bfda-cf55285ad170
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: HafPB3VkkT8jeHzfoRGzvR11cWTBiW3C3YE-vW3o8e0
 id: request_org_unit
 label: 'GIR Request New Org Unit'
 app_group: 0
@@ -81,8 +82,8 @@ tasks:
     tasktype: MaestroWebform
     nextstep: check_before_submitting
     nextfalsestep: ''
-    top: '205'
-    left: '275'
+    top: '197'
+    left: '267'
     assignby: fixed
     assignto: ''
     raphael: ''
@@ -92,7 +93,7 @@ tasks:
     lines: {  }
     data:
       unique_id: submission
-      webform_machine_name: gir_entity_identity_creation
+      webform_machine_name: request_new_organizational_unit
       modal: notmodal
       skip_webform_handlers: 0
       webform_nodes_attached_to: none
@@ -118,12 +119,12 @@ tasks:
       escalation_after: 0
   request_approval:
     id: request_approval
-    label: 'Approve or Reject GIR User'
+    label: 'Approve or Reject Org Unit'
     tasktype: MaestroWebform
     nextstep: if_approved
     nextfalsestep: ''
-    top: '470'
-    left: '510'
+    top: '465'
+    left: '505'
     assignby: fixed
     assignto: ''
     raphael: ''
@@ -133,7 +134,7 @@ tasks:
     lines: {  }
     data:
       unique_id: submission
-      webform_machine_name: gir_entity_identity_creation
+      webform_machine_name: request_new_organizational_unit
       modal: notmodal
       skip_webform_handlers: 0
       webform_nodes_attached_to: none
@@ -235,12 +236,12 @@ tasks:
       escalation_after: null
   entity_and_identity_creation:
     id: entity_and_identity_creation
-    label: 'Entity & Identity Creation in GIR'
+    label: 'Org Unit Creation in GIR'
     tasktype: MaestroBatchFunction
     nextstep: gir_creation_result
     nextfalsestep: ''
-    top: '625'
-    left: '275'
+    top: '620'
+    left: '270'
     assignby: fixed
     assignto: ''
     raphael: ''
@@ -306,8 +307,8 @@ tasks:
     tasktype: MaestroInteractive
     nextstep: end
     nextfalsestep: ''
-    top: '760'
-    left: '280'
+    top: '755'
+    left: '275'
     assignby: fixed
     assignto: ''
     raphael: ''
@@ -340,8 +341,8 @@ tasks:
     tasktype: MaestroWebform
     nextstep: if_ready_for_review
     nextfalsestep: ''
-    top: '30'
-    left: '510'
+    top: '25'
+    left: '505'
     assignby: fixed
     assignto: ''
     raphael: ''
@@ -351,7 +352,7 @@ tasks:
     lines: {  }
     data:
       unique_id: submission
-      webform_machine_name: gir_entity_identity_creation
+      webform_machine_name: request_new_organizational_unit
       modal: notmodal
       skip_webform_handlers: 0
       webform_nodes_attached_to: none
@@ -375,3 +376,4 @@ tasks:
       notification_escalation: ''
       reminder_after: 0
       escalation_after: 0
+
