Updated webform mockups.

--- a/config/optional/system.site.yml
+++ b/config/optional/system.site.yml
@@ -1,1 +1,11 @@
-default_langcode: da
+name: GIR
+mail: admin@example.com
+slogan: ''
+page:
+  403: ''
+  404: ''
+  front: /user/login
+admin_compact_mode: false
+weight_select_max: 100
+langcode: en
+default_langcode: en
