--- a/config/optional/webform.webform.move_many_externals.yml
+++ b/config/optional/webform.webform.move_many_externals.yml
@@ -5,18 +5,18 @@ dependencies:
     - webform_revisions
 third_party_settings:
   webform_revisions:
-    contentEntity_id: '7'
+    contentEntity_id: '10'
 open: null
 close: null
 weight: 0
 uid: 1
 template: false
 archive: false
-id: disable_organizational_unit
-title: 'Disable Organizational Unit'
-description: 'Send a request for disabling an organizational unit and submit it for approval.'
-category: GIR
-elements: "search:\n  '#type': fieldset\n  '#title': Search\n  search_for_organizational_unit:\n    '#type': search\n    '#title': 'Search for Organizational Unit'\norganizational_data:\n  '#type': fieldset\n  '#title': 'Organizational Data'\n  name:\n    '#type': textfield\n    '#title': Name\n    '#disabled': true\n    '#readonly': true\n    '#required': true\n  parent_unit:\n    '#type': webform_term_select\n    '#title': 'Parent Unit'\n    '#disabled': true\n    '#prepopulate': true\n    '#vocabulary': consultancies\n    '#breadcrumb_delimiter': ''\n  location:\n    '#type': webform_term_select\n    '#title': Location\n    '#disabled': true\n    '#prepopulate': true\n    '#vocabulary': consultancies\n    '#breadcrumb_delimiter': ''\nend_date:\n  '#type': date\n  '#title': 'End date'\n  '#date_date_format': ''\napproval_information:\n  '#type': fieldset\n  '#title': 'Approval Information'\n  time_limit:\n    '#type': date\n    '#title': 'Time Limit'\n    '#date_date_format': ''\n  justification:\n    '#type': textfield\n    '#title': Justification\n  approver:\n    '#type': webform_entity_select\n    '#title': Approver\n    '#target_type': user\n    '#selection_handler': 'default:user'\n    '#selection_settings':\n      include_anonymous: false\n      filter:\n        type: _none"
+id: move_many_externals
+title: 'Move many externals'
+description: ''
+category: ''
+elements: "origin_and_destination_units:\n  '#type': fieldset\n  '#title': 'Origin and Destination Units'\n  origin:\n    '#type': webform_term_select\n    '#title': 'Origin Unit'\n    '#vocabulary': orgunit\n    '#breadcrumb_delimiter': ''\n  destination_unit:\n    '#type': webform_term_select\n    '#title': 'Destination Unit'\n    '#vocabulary': orgunit\n    '#breadcrumb_delimiter': ''\nexternals:\n  '#type': fieldset\n  '#title': Externals\n  peter_hansen:\n    '#type': checkbox\n    '#title': 'Peter Hansen'\n  julie_jorgensen:\n    '#type': checkbox\n    '#title': 'Julie Jørgensen'\n  morten_hansen:\n    '#type': checkbox\n    '#title': 'Morten Hansen'\n  sdasds:\n    '#type': checkbox\n    '#title': ...\napproval_information:\n  '#type': fieldset\n  '#title': 'Approval Information'\n  time_limit:\n    '#type': date\n    '#title': 'Time Limit'\n    '#date_date_format': ''\n  justification:\n    '#type': textfield\n    '#title': Justification\n  approver:\n    '#type': webform_entity_select\n    '#title': Approver\n    '#target_type': user\n    '#selection_handler': 'default:user'\n    '#selection_settings':\n      include_anonymous: true\n      filter:\n        type: _none"
 css: ''
 javascript: ''
 settings:
