--- a/config/optional/maestro.maestro_template.request_org_unit.yml
+++ b/config/optional/maestro.maestro_template.request_org_unit.yml
@@ -1,8 +1,6 @@
 langcode: en
 status: true
 dependencies: {  }
-_core:
-  default_config_hash: HafPB3VkkT8jeHzfoRGzvR11cWTBiW3C3YE-vW3o8e0
 id: request_org_unit
 label: 'GIR Request New Org Unit'
 app_group: 0
@@ -38,7 +36,7 @@ variables:
     variable_value: ''
   gir_url:
     variable_id: gir_url
-    variable_value: 'http://localhost:5001/service/o/'
+    variable_value: 'http://172.16.110.132:5001'
   url_status:
     variable_id: url_status
     variable_value: ''
@@ -117,8 +115,8 @@ tasks:
     tasktype: MaestroWebform
     nextstep: if_approved
     nextfalsestep: ''
-    top: '465'
-    left: '505'
+    top: '460'
+    left: '500'
     assignby: fixed
     assignto: ''
     raphael: ''
@@ -234,8 +232,8 @@ tasks:
     tasktype: MaestroBatchFunction
     nextstep: gir_creation_result
     nextfalsestep: ''
-    top: '620'
-    left: '270'
+    top: '615'
+    left: '265'
     assignby: fixed
     assignto: ''
     raphael: ''
@@ -265,8 +263,8 @@ tasks:
     tasktype: MaestroSetProcessVariable
     nextstep: request_approval
     nextfalsestep: ''
-    top: '335'
-    left: '515'
+    top: '330'
+    left: '510'
     assignby: fixed
     assignto: ''
     raphael: ''
@@ -370,4 +368,3 @@ tasks:
       notification_escalation: ''
       reminder_after: 0
       escalation_after: 0
-
