--- a/config/optional/webform.webform.request_new_organizational_unit.yml
+++ b/config/optional/webform.webform.request_new_organizational_unit.yml
@@ -2,10 +2,11 @@ langcode: en
 status: open
 dependencies:
   module:
+    - maestro_webform
     - webform_revisions
 third_party_settings:
   webform_revisions:
-    contentEntity_id: '9'
+    contentEntity_id: null
 open: null
 close: null
 weight: 0
@@ -195,5 +196,17 @@ access:
     roles: {  }
     users: {  }
     permissions: {  }
-handlers: {  }
+handlers:
+  spawn_maestro_workflow:
+    id: maestro
+    label: 'Spawn Maestro Workflow'
+    notes: ''
+    handler_id: spawn_maestro_workflow
+    status: true
+    conditions: {  }
+    weight: 0
+    settings:
+      maestro_template: request_org_unit
+      maestro_message_success: ''
+      maestro_message_failure: ''
 variants: {  }
